--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "precommit": "lint-staged",
+    "migration:run": "prisma migrate deploy",
+    "build": "tspc -p tsconfig.build.json",
+    "test": "jest --passWithNoTests --runInBand",
+    "lint": "eslint .",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -22,7 +26,7 @@
     "dotenv-cli": "^7.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "husky": "^8.0.3",
+    "husky": "^8.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
