--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "migration:run": "prisma migrate deploy",
     "build": "tspc -p tsconfig.build.json",
     "test": "jest --passWithNoTests --runInBand",
+    "dev": "nodemon --watch 'src/' --exec 'ts-node-dev -r tsconfig-paths/register ./src/server.ts' -e ts",
     "lint": "eslint .",
     "prepare": "husky install"
   },
@@ -15,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
@@ -31,6 +33,7 @@
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
     "prisma": "^5.7.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
