fix: start script

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "precommit": "lint-staged",
     "migration:run": "prisma migrate deploy",
     "build": "tspc -p tsconfig.build.json",
+    "start": "npm run migration:run && node dist/server.js",
     "test": "jest --passWithNoTests --runInBand",
     "dev": "nodemon --watch 'src/' --exec 'ts-node-dev -r tsconfig-paths/register ./src/server.ts' -e ts",
     "lint": "eslint .",
